fix(board): virtuoso footer would overflow

--- a/src/views/board/board.module.css
+++ b/src/views/board/board.module.css
@@ -1,3 +1,7 @@
+.content {
+  overflow: hidden;
+}
+
 .footer {
   color: var(--post-mobile-abbr-text-color);
   padding: 15px 0 10px 5px;
